--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,7 @@ version = "0.1.0"
 
 [deps]
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+
+[compat]
+Distances = "^0.8"
+julia = "~1.0, ~1.1"
