--- a/Project.toml
+++ b/Project.toml
@@ -9,3 +9,9 @@ Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 [compat]
 Distances = "^0.8"
 julia = "~1.0, ~1.1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
