--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Joris Kraak <me@joriskraak.nl>"]
 version = "0.1.0"
 
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 
 [compat]
